--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
+      "packagerConfig": {
+        "icon": "./res/player"
+      },
+      "makers": [{
           "name": "@electron-forge/maker-squirrel",
           "config": {
             "name": "xl_player"
